Updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student at UCI who is studying software development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am born and raised in Orange County, CA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love hanging out with my Girlfriend and playing video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would like to work for a smaller succesful software company as a Software Engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Santa Ana, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to work from home :)</p>
     </section>
 
     <footer id="footer">
